--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "music-app-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
     "start": "node src/app"
@@ -16,7 +16,6 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.8",
-    "serverless-http": "^3.0.1"
+    "mongoose": "^6.2.8"
   }
 }
